--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/DoyoSaee/Express-Chat/issues"
   },
-  "homepage": "https://github.com/DoyoSaee/Express-Chat#readme"
+  "homepage": "https://github.com/DoyoSaee/Express-Chat#readme",
+  "dependencies": {
+    "ws": "^8.18.3"
+  }
 }
